--- a/MOVIE FOLDER/HOMEPAGE.html
+++ b/MOVIE FOLDER/HOMEPAGE.html
@@ -86,27 +86,27 @@
         <h3>Top Movies</h3>
         <h4><button>Bollywood Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="munjya.jpeg"></a><br><br><center><b>Munjya (2024)</b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/munjya.jpeg"></a><br><br><center><b>Munjya (2024)</b></center></div>
 
-            <div id="id2" class="box"><a href=""><img src="12th Fail.jpg" alt="12th Fail"></a><br><br><center><b>12th Fail (2023)</b></center></div>oot
+            <div id="id2" class="box"><a href=""><img src="Image/12th Fail.jpg" alt="12th Fail"></a><br><br><center><b>12th Fail (2023)</b></center></div>oot
 
-            <div id="id3" class="box"><a href=""><img src="Fighter.jpg" alt="Fighter"></a><br><br><center><b>Fighter (2024)</b></center></div>
+            <div id="id3" class="box"><a href=""><img src="Image/Fighter.jpg" alt="Fighter"></a><br><br><center><b>Fighter (2024)</b></center></div>
 
-            <div id="id4" class="box"><a href=""><img src="Jawan.webp" alt="Jawan"></a><br><br><center><b>Jawan (2023)</b></center></div>
+            <div id="id4" class="box"><a href=""><img src="Image/Jawan.webp" alt="Jawan"></a><br><br><center><b>Jawan (2023)</b></center></div>
 
-            <div id="id5" class="box"><a href=""><img src="Kalki 2898 AD.jpeg" alt="Kalki 2898 AD"></a><br><br><center><b>Kalki 2898 AD (2024)</b></center></div>
+            <div id="id5" class="box"><a href=""><img src="Image/Kalki 2898 AD.jpeg" alt="Kalki 2898 AD"></a><br><br><center><b>Kalki 2898 AD (2024)</b></center></div>
 
-            <div id="id6" class="box"><a href=""><img src="Laapataa Ladies.jpg" alt="Laapataa Ladies"></a><br><br><center><b>Laapataa Ladies (2023)</b></center></div>
+            <div id="id6" class="box"><a href=""><img src="Image/Laapataa Ladies.jpg" alt="Laapataa Ladies"></a><br><br><center><b>Laapataa Ladies (2023)</b></center></div>
         </div>
         
         <h4><button>Hollywood Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><img src="Parasite.jpg" alt="Parasite">Parasite (2019)</div>
-            <div id="id2" class="box"><img src="Spider-Man_No Way Home.jpg" alt="Spider-Man: No Way Home">Spider-Man: No Way Home (2021)</div>
-            <div id="id3" class="box"><img src="Top Gun_Maverick.jpg" alt="Top Gun: Maverick">Top Gun: Maverick (2022)</div>
-            <div id="id4" class="box"><img src="Oppenheimer.jpg" alt="Oppenheimer">Oppenheimer (2023)</div>
-            <div id="id5" class="box"><img src="Dune_Part One.webp" alt="Dune: Part One">Dune_Part One</div>
-            <div id="id6" class="box"><img src="Dune_Part Two.jpg" alt="Dune: Part Two">Dune_Part Two</div>
+            <div id="id1" class="box"><img src="Image/Parasite.jpg" alt="Parasite">Parasite (2019)</div>
+            <div id="id2" class="box"><img src="Image/Spider-Man_No Way Home.jpg" alt="Spider-Man: No Way Home">Spider-Man: No Way Home (2021)</div>
+            <div id="id3" class="box"><img src="Image/Top Gun_Maverick.jpg" alt="Top Gun: Maverick">Top Gun: Maverick (2022)</div>
+            <div id="id4" class="box"><img src="Image/Oppenheimer.jpg" alt="Oppenheimer">Oppenheimer (2023)</div>
+            <div id="id5" class="box"><img src="Image/Dune_Part One.webp" alt="Dune: Part One">Dune_Part One</div>
+            <div id="id6" class="box"><img src="Image/Dune_Part Two.jpg" alt="Dune: Part Two">Dune_Part Two</div>
         </div>
 
         <h4><button>South Movies</button></h4>
