--- a/MOVIE FOLDER/Jawan.html
+++ b/MOVIE FOLDER/Jawan.html
@@ -86,10 +86,10 @@
     <main>
         <h2>Jawan (2023)</h2>
         <div class="Jawan">
-            <div id="image_Jawan" class="photo"><img src="Jawan.webp" alt="Jawan(2023)"></div>
+            <div id="image_Jawan" class="photo"><img src="Image/Jawan.webp" alt="Jawan(2023)"></div>
 
             <div id="Details_Jawan" class="photo">
-                <b>Genres:</b>Action, Thriller, Drama<br>
+                <big><b>Genres:</b>Action, Thriller, Drama<br>
                 <b>Director:</b>Atlee Kumar<br>
                 <b>Cast:</b>
                 <ol>
@@ -101,6 +101,7 @@
                 </ol>
                 <b>Release Date:</b>September 7, 2023<br><br>
                 <b>Duration:</b>2 hours 45 minutes
+                </big>
             </div>
         </div><br><br>
 
@@ -115,8 +116,29 @@
 
         <h3>User Reviews</h3>
         <div class="Review">
-        <b>8/10</b><p>"Jawan" is an action-packed thriller that doesn't forget to carry a social conscience. It successfully navigates the terrain of action and emotion, offering audiences a unique cinematic experience. While pacing issues may hinder emotional connections at times, the film's cinematic brilliance, strong performances, and impactful background score make it a must-watch. "Jawan" not only entertains but also provokes thought on the systemic issues it confronts, making it a compelling addition to the action genre.</p>
+        User 1:&nbsp;&nbsp;<b>8/10</b><br>
+        <b>An Action-Packed Thriller With a Social Conscience</b>
+        <p>"Jawan" is an action-packed thriller that doesn't forget to carry a social conscience. It successfully navigates the terrain of action and emotion, offering audiences a unique cinematic experience. While pacing issues may hinder emotional connections at times, the film's cinematic brilliance, strong performances, and impactful background score make it a must-watch. "Jawan" not only entertains but also provokes thought on the systemic issues it confronts, making it a compelling addition to the action genre.</p>
+
+        User 2:&nbsp;&nbsp;<b>10/10</b><br>
+        <b>must watch in theatre</b>
+        <p>This movie is really a must watch in theatre.
+            I went in with little expectations and came out really amazed.
+            SRK has really shown his best in this movie, his acting seems on point.
+            music action story of this film is all great.
+            all actors have done great.</p>
+
+        User 3:&nbsp;&nbsp;<b>9/10</b><br>
+        <b>Full on entertainment</b>
+        <p>The movie was entertaining with blend of a lot of drama, little
+           comedy, some thrill, some suspense and a lot of action. The story was good with a good message in it, the screenplay was uneven but doesn't damages the story, the direction was good and the performances were also good. The BGM and the action scenes were great, you will love them. Also, the message the movie wanted to show was good and effective.
+           Some scenes were rushed and some things remained unexplained but the story is shown in such a grand way that these things will not bother you that much.
+           Overall, you should definitely give this movie a try.</p>
         </div>
+
+        <form>
+            
+        </form>
     </main>
 </body>
 </html>
