--- a/MOVIE FOLDER/Movie_Project.html
+++ b/MOVIE FOLDER/Movie_Project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Review Website</title>
-    <link rel="stylesheet" href="HOMEPAGE.CSS">
+    <link rel="stylesheet" href="Movie_Project.css">
 </head>
 <body>
     <header>
@@ -17,10 +17,10 @@
             <!-- Category -->
              <div class="Nav-bar">
                 <ul>
-                    <li><big><a href="Movie_Project.html" id="search">Home</a></big></li>
+                    <li><big><a href="Movie_Project.html" id="Home">Home</a></big></li>
                     <li><big>Action</big>
                         <div class="sub1">
-                            <ul>
+                            <ul class="tco">
                                 <li><a href="Hollywood_Action.html">Hollywood</a></li>
                                 <li><a href="Bollywood_Action.html">Bollywood</a></li>
                                 <li><a href="South_Action.html">South</a></li>
@@ -87,47 +87,62 @@
         <h3>Top Movies</h3>
         <h4><button>Bollywood Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="Image/Jawan.webp" alt="Jawan"></a><br><br><center><b>Jawan (2023)</b></center></div>
+            <div id="id1" class="box"><a href="Jawan.html"><img src="Image/Jawan.webp" alt="Jawan"></a><br><br><center><b>Jawan (2023)</b></center></div>
 
-            <div id="id2" class="box"><a href=""><img src="12th Fail.jpg" alt="12th Fail"></a><br><br><center><b>Drishyam 2 (2022)</b></center></div>
+            <div id="id2" class="box"><a href=""><img src="" alt="Super 30"></a><br><br><center><b>Super 30 (2019)</b></center></div>
 
-            <div id="id3" class="box"><a href=""><img src="Fighter.jpg" alt="Fighter"></a><br><br><center><b>A Thursday (2022)</b></center></div>
+            <div id="id3" class="box"><a href=""><img src="" alt="War"></a><br><br><center><b>War (2019)</b></center></div>
 
-            <div id="id4" class="box"><a href=""><img src="Jawan.webp" alt="Jawan"></a><br><br><center><b>Shershaah (2021)</b></center></div>
+            <div id="id4" class="box"><a href=""><img src="Jawan.webp" alt="K.G.F: Chapter 2"></a><br><br><center><b>K.G.F: Chapter 2 (2022)</b></center></div>
 
-            <div id="id5" class="box"><a href=""><img src="Kalki 2898 AD.jpeg" alt="Kalki 2898 AD"></a><br><br><center><b>Kalki 2898 AD (2024)</b></center></div>
+            <div id="id5" class="box"><a href=""><img src="Kalki 2898 AD.jpeg" alt="Sooryavanshi"></a><br><br><center><b>Sooryavansh(2021)</b></center></div>
 
-            <div id="id6" class="box"><a href=""><img src="Laapataa Ladies.jpg" alt="Laapataa Ladies"></a><br><br><center><b>Laapataa Ladies (2023)</b></center></div>
+            <div id="id6" class="box"><a href=""><img src="Laapataa Ladies.jpg" alt="Drishyam 2"></a><br><br><center><b>Drishyam 2 (2022)</b></center></div>
         </div>
         
         <h4><button>Hollywood Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="Parasite.jpg" alt="Parasite"></a><br><br><center><b>Parasite (2019)</b></center></div>
-            <div id="id2" class="box"><a href=""><img src="Spider-Man_No Way Home.jpg" alt="Spider-Man: No Way Home"></a><br><br><center><b>Spider-Man: No Way Home (2021)</b></center></div>
-            <div id="id3" class="box"><a href=""><img src="Top Gun_Maverick.jpg" alt="Top Gun: Maverick"></a><br><br><center><b>Top Gun: Maverick (2022)</b></center></div>
-            <div id="id4" class="box"><a href=""><img src="Oppenheimer.jpg" alt="Oppenheimer"></a><br><br><center><b>Oppenheimer (2023)</b></center></div>
-            <div id="id5" class="box"><a href=""><img src="Dune_Part One.webp" alt="Dune: Part One"></a><br><br><center><b>Dune_Part One</b></center></div>
-            <div id="id6" class="box"><a href=""><img src="Dune_Part Two.jpg" alt="Dune: Part Two"></a><br><br><center><b>Dune_Part Two</b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Parasite.jpg" alt="Parasite"></a><br><br><center><b>Parasite (2019)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="Image/Spider-Man_No Way Home.jpg" alt="Spider-Man: No Way Home"></a><br><br><center><b>Spider-Man: No Way Home (2021)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="Image/Top Gun_Maverick.jpg" alt="Top Gun: Maverick"></a><br><br><center><b>Top Gun: Maverick (2022)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="Image/Oppenheimer.jpg" alt="Oppenheimer"></a><br><br><center><b>Oppenheimer (2023)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="Image/Dune_Part One.webp" alt="Dune: Part One"></a><br><br><center><b>Dune_Part One</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="Image/Dune_Part Two.jpg" alt="Dune: Part Two"></a><br><br><center><b>Dune_Part Two</b></center></div>
         </div>
 
         <h4><button>South Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="" alt="Jersey"></a><br><br><center><b>Jersey (2019)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="" alt="Sita Ramam"></a><br><br><center><b>Sita Ramam (2022)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="" alt="Mahanati"></a><br><br><center><b>Mahanati (2018)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="" alt="Hi Nanna"></a><br><br><center><b>Hi Nanna (2023)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="Image/Baahubali 2_The Conclusion.jpg" alt="Baahubali 2: The Conclusion"></a><br><br><center><b>Baahubali 2: The Conclusion (2017)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="" alt="RRR"></a><br><br><center><b>RRR (2022)</b></center></div>
         </div>
 
         <h4><button>Odia Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="" alt="Ajab Sanjura Gajab Love"></a><br><br><center><b>Ajab Sanjura Gajab Love (2019)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="" alt="Mana Museum"></a><br><br><center><b>Mana Museum (2022)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="" alt="Phalguna Chaitra"></a><br><br><center><b>Phalguna Chaitra (2023)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="" alt="Operation 12/17"></a><br><br><center><b>Operation 12/17 (2024)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="" alt="Daman"></a><br><br><center><b>Daman (2022)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="" alt="Pratikshya"></a><br><br><center><b>Pratikshya (2022)</b></center></div>
         </div>
 
 
@@ -135,22 +150,32 @@
         <h3>Popular Movies</h3>
         <h4><button>Bollywood Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Laapataa Ladies.jpg" alt="Laapataa Ladies"></a><br><br><center><b>Laapataa Ladies (2024)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="Image/12th Fail.jpg" alt="12th Fail"></a><br><br><center><b>12th Fail (2023)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="Image/Fighter.jpg" alt="Fighter"></a><br><br><center><b>Fighter (2024)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="" alt="Shershaah"></a><br><br><center><b>Shershaah (2021)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="" alt="Munjya"></a><br><br><center><b>Munjya (2024)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="Image/Kalki 2898 AD.jpeg" alt="Kalki 2898 AD"></a><br><br><center><b>Kalki 2898 AD (2024)</b></center></div>
         </div>
         
         <h4><button>Hollywood Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="" alt="Encanto"></a><br><br><center><b>Encanto (2021)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="" alt="Harry Potter 20th Anniversary: Return to Hogwarts"></a><br><br><center><b>Harry Potter 20th Anniversary: Return to Hogwarts (2022)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="" alt="The Lost Daughter"></a><br><br><center><b>The Lost Daughter (2021)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="" alt="The Power of the Dog"></a><br><br><center><b>The Power of the Dog (2021)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="" alt="Barbie"></a><br><br><center><b>Barbie (2023)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="" alt="The Batman"></a><br><br><center><b>The Batman (2022)</b></center></div>
         </div>
 
         <h4><button>South Movies</button></h4>
@@ -165,12 +190,17 @@
 
         <h4><button>Odia Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="" alt="Bigul"></a><br><br><center><b>Bigul (2024)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="" alt="Kalira Atita"></a><br><br><center><b>Kalira Atita (2020)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="" alt="Biju Babu"></a><br><br><center><b>Biju Babu (2019)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="" alt="Sala Budha Ra Badla"></a><br><br><center><b>Sala Budha Ra Badla (2020)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="" alt="Chal Tike Dusta Heba"></a><br><br><center><b>Chal Tike Dusta Heba (2019)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="" alt="Tokata Fasigala"></a><br><br><center><b>Tokata Fasigala (2018)</b></center></div>
         </div>
 
 
