--- a/MOVIE FOLDER/Movie_Project.html
+++ b/MOVIE FOLDER/Movie_Project.html
@@ -89,15 +89,15 @@
         <div class="container1">
             <div id="id1" class="box"><a href="Jawan.html"><img src="Image/Jawan.webp" alt="Jawan"></a><br><br><center><b>Jawan (2023)</b></center></div>
 
-            <div id="id2" class="box"><a href=""><img src="" alt="Super 30"></a><br><br><center><b>Super 30 (2019)</b></center></div>
+            <div id="id2" class="box"><a href=""><img src="Image/Super 30.jpeg" alt="Super 30"></a><br><br><center><b>Super 30 (2019)</b></center></div>
 
-            <div id="id3" class="box"><a href=""><img src="" alt="War"></a><br><br><center><b>War (2019)</b></center></div>
+            <div id="id3" class="box"><a href=""><img src="Image/War.jpeg" alt="War"></a><br><br><center><b>War (2019)</b></center></div>
 
-            <div id="id4" class="box"><a href=""><img src="Jawan.webp" alt="K.G.F: Chapter 2"></a><br><br><center><b>K.G.F: Chapter 2 (2022)</b></center></div>
+            <div id="id4" class="box"><a href=""><img src="Image/K.G.F Chapter 2.jpg" alt="K.G.F: Chapter 2"></a><br><br><center><b>K.G.F: Chapter 2 (2022)</b></center></div>
 
-            <div id="id5" class="box"><a href=""><img src="Kalki 2898 AD.jpeg" alt="Sooryavanshi"></a><br><br><center><b>Sooryavansh(2021)</b></center></div>
+            <div id="id5" class="box"><a href=""><img src="Image/Sooryavanshi.jpg" alt="Sooryavanshi"></a><br><br><center><b>Sooryavansh(2021)</b></center></div>
 
-            <div id="id6" class="box"><a href=""><img src="Laapataa Ladies.jpg" alt="Drishyam 2"></a><br><br><center><b>Drishyam 2 (2022)</b></center></div>
+            <div id="id6" class="box"><a href=""><img src="Image/Drishyam 2.jpeg" alt="Drishyam 2"></a><br><br><center><b>Drishyam 2 (2022)</b></center></div>
         </div>
         
         <h4><button>Hollywood Movies</button></h4>
@@ -117,32 +117,32 @@
 
         <h4><button>South Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt="Jersey"></a><br><br><center><b>Jersey (2019)</b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Jersey.jpeg" alt="Jersey"></a><br><br><center><b>Jersey (2019)</b></center></div>
 
-            <div id="id2" class="box"><a href=""><img src="" alt="Sita Ramam"></a><br><br><center><b>Sita Ramam (2022)</b></center></div>
+            <div id="id2" class="box"><a href=""><img src="Image/Sita Ramam.jpeg" alt="Sita Ramam"></a><br><br><center><b>Sita Ramam (2022)</b></center></div>
 
-            <div id="id3" class="box"><a href=""><img src="" alt="Mahanati"></a><br><br><center><b>Mahanati (2018)</b></center></div>
+            <div id="id3" class="box"><a href=""><img src="Image/Mahanati.jpeg" alt="Mahanati"></a><br><br><center><b>Mahanati (2018)</b></center></div>
 
-            <div id="id4" class="box"><a href=""><img src="" alt="Hi Nanna"></a><br><br><center><b>Hi Nanna (2023)</b></center></div>
+            <div id="id4" class="box"><a href=""><img src="Image/Hi Nanna.jpeg" alt="Hi Nanna"></a><br><br><center><b>Hi Nanna (2023)</b></center></div>
 
             <div id="id5" class="box"><a href=""><img src="Image/Baahubali 2_The Conclusion.jpg" alt="Baahubali 2: The Conclusion"></a><br><br><center><b>Baahubali 2: The Conclusion (2017)</b></center></div>
 
-            <div id="id6" class="box"><a href=""><img src="" alt="RRR"></a><br><br><center><b>RRR (2022)</b></center></div>
+            <div id="id6" class="box"><a href=""><img src="Image/RRR.jpeg" alt="RRR"></a><br><br><center><b>RRR (2022)</b></center></div>
         </div>
 
         <h4><button>Odia Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt="Ajab Sanjura Gajab Love"></a><br><br><center><b>Ajab Sanjura Gajab Love (2019)</b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Ajab Sanjura Gajab Love.jpeg" alt="Ajab Sanjura Gajab Love"></a><br><br><center><b>Ajab Sanjura Gajab Love (2019)</b></center></div>
 
-            <div id="id2" class="box"><a href=""><img src="" alt="Mana Museum"></a><br><br><center><b>Mana Museum (2022)</b></center></div>
+            <div id="id2" class="box"><a href=""><img src="Image/Mana Museum.jpeg" alt="Mana Museum"></a><br><br><center><b>Mana Museum (2022)</b></center></div>
 
-            <div id="id3" class="box"><a href=""><img src="" alt="Phalguna Chaitra"></a><br><br><center><b>Phalguna Chaitra (2023)</b></center></div>
+            <div id="id3" class="box"><a href=""><img src="Image/Phalguna Chaitra.jpeg" alt="Phalguna Chaitra"></a><br><br><center><b>Phalguna Chaitra (2023)</b></center></div>
 
-            <div id="id4" class="box"><a href=""><img src="" alt="Operation 12/17"></a><br><br><center><b>Operation 12/17 (2024)</b></center></div>
+            <div id="id4" class="box"><a href=""><img src="Image/Operation 12_17.jpeg" alt="Operation 12/17"></a><br><br><center><b>Operation 12/17 (2024)</b></center></div>
 
-            <div id="id5" class="box"><a href=""><img src="" alt="Daman"></a><br><br><center><b>Daman (2022)</b></center></div>
+            <div id="id5" class="box"><a href=""><img src="Image/Daman.jpeg" alt="Daman"></a><br><br><center><b>Daman (2022)</b></center></div>
 
-            <div id="id6" class="box"><a href=""><img src="" alt="Pratikshya"></a><br><br><center><b>Pratikshya (2022)</b></center></div>
+            <div id="id6" class="box"><a href=""><img src="Image/Pratikshya.jpeg" alt="Pratikshya"></a><br><br><center><b>Pratikshya (2022)</b></center></div>
         </div>
 
 
@@ -156,26 +156,26 @@
 
             <div id="id3" class="box"><a href=""><img src="Image/Fighter.jpg" alt="Fighter"></a><br><br><center><b>Fighter (2024)</b></center></div>
 
-            <div id="id4" class="box"><a href=""><img src="" alt="Shershaah"></a><br><br><center><b>Shershaah (2021)</b></center></div>
+            <div id="id4" class="box"><a href=""><img src="Image/Shershaah.jpeg" alt="Shershaah"></a><br><br><center><b>Shershaah (2021)</b></center></div>
 
-            <div id="id5" class="box"><a href=""><img src="" alt="Munjya"></a><br><br><center><b>Munjya (2024)</b></center></div>
+            <div id="id5" class="box"><a href=""><img src="Image/munjya.jpeg" alt="Munjya"></a><br><br><center><b>Munjya (2024)</b></center></div>
 
             <div id="id6" class="box"><a href=""><img src="Image/Kalki 2898 AD.jpeg" alt="Kalki 2898 AD"></a><br><br><center><b>Kalki 2898 AD (2024)</b></center></div>
         </div>
         
         <h4><button>Hollywood Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt="Encanto"></a><br><br><center><b>Encanto (2021)</b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Encanto.jpeg" alt="Encanto"></a><br><br><center><b>Encanto (2021)</b></center></div>
 
-            <div id="id2" class="box"><a href=""><img src="" alt="Harry Potter 20th Anniversary: Return to Hogwarts"></a><br><br><center><b>Harry Potter 20th Anniversary: Return to Hogwarts (2022)</b></center></div>
+            <div id="id2" class="box"><a href=""><img src="Image/Harry Potter 20th Anniversary_Return to Hogwarts.jpeg" alt="Harry Potter 20th Anniversary: Return to Hogwarts"></a><br><br><center><b>Harry Potter 20th Anniversary: Return to Hogwarts (2022)</b></center></div>
 
-            <div id="id3" class="box"><a href=""><img src="" alt="The Lost Daughter"></a><br><br><center><b>The Lost Daughter (2021)</b></center></div>
+            <div id="id3" class="box"><a href=""><img src="Image/The Lost Daughter.jpeg" alt="The Lost Daughter"></a><br><br><center><b>The Lost Daughter (2021)</b></center></div>
 
-            <div id="id4" class="box"><a href=""><img src="" alt="The Power of the Dog"></a><br><br><center><b>The Power of the Dog (2021)</b></center></div>
+            <div id="id4" class="box"><a href=""><img src="Image/The Power of the Dog.jpeg" alt="The Power of the Dog"></a><br><br><center><b>The Power of the Dog (2021)</b></center></div>
 
-            <div id="id5" class="box"><a href=""><img src="" alt="Barbie"></a><br><br><center><b>Barbie (2023)</b></center></div>
+            <div id="id5" class="box"><a href=""><img src="Image/Barbie.jpeg" alt="Barbie"></a><br><br><center><b>Barbie (2023)</b></center></div>
 
-            <div id="id6" class="box"><a href=""><img src="" alt="The Batman"></a><br><br><center><b>The Batman (2022)</b></center></div>
+            <div id="id6" class="box"><a href=""><img src="Image/The Batman.jpeg" alt="The Batman"></a><br><br><center><b>The Batman (2022)</b></center></div>
         </div>
 
         <h4><button>South Movies</button></h4>
@@ -190,17 +190,17 @@
 
         <h4><button>Odia Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt="Bigul"></a><br><br><center><b>Bigul (2024)</b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Bigul.jpeg" alt="Bigul"></a><br><br><center><b>Bigul (2024)</b></center></div>
 
-            <div id="id2" class="box"><a href=""><img src="" alt="Kalira Atita"></a><br><br><center><b>Kalira Atita (2020)</b></center></div>
+            <div id="id2" class="box"><a href=""><img src="Image/Kalira Atita.jpeg" alt="Kalira Atita"></a><br><br><center><b>Kalira Atita (2020)</b></center></div>
 
-            <div id="id3" class="box"><a href=""><img src="" alt="Biju Babu"></a><br><br><center><b>Biju Babu (2019)</b></center></div>
+            <div id="id3" class="box"><a href=""><img src="Image/Biju Babu.jpeg" alt="Biju Babu"></a><br><br><center><b>Biju Babu (2019)</b></center></div>
 
-            <div id="id4" class="box"><a href=""><img src="" alt="Sala Budha Ra Badla"></a><br><br><center><b>Sala Budha Ra Badla (2020)</b></center></div>
+            <div id="id4" class="box"><a href=""><img src="Image/Sala Budha Ra Badla.jpeg" alt="Sala Budha Ra Badla"></a><br><br><center><b>Sala Budha Ra Badla (2020)</b></center></div>
 
-            <div id="id5" class="box"><a href=""><img src="" alt="Chal Tike Dusta Heba"></a><br><br><center><b>Chal Tike Dusta Heba (2019)</b></center></div>
+            <div id="id5" class="box"><a href=""><img src="Image/Chal Tike Dusta Heba.jpeg" alt="Chal Tike Dusta Heba"></a><br><br><center><b>Chal Tike Dusta Heba (2019)</b></center></div>
 
-            <div id="id6" class="box"><a href=""><img src="" alt="Tokata Fasigala"></a><br><br><center><b>Tokata Fasigala (2018)</b></center></div>
+            <div id="id6" class="box"><a href=""><img src="Image/Tokata Fasigala.jpeg" alt="Tokata Fasigala"></a><br><br><center><b>Tokata Fasigala (2018)</b></center></div>
         </div>
 
 
