--- a/MOVIE FOLDER/Movie_Project.html
+++ b/MOVIE FOLDER/Movie_Project.html
@@ -180,12 +180,17 @@
 
         <h4><button>South Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Shyam Singha Roy.jpeg" alt="Shyam Singha Roy"></a><br><br><center><b>Shyam Singha Roy (2021)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="Image/Ala Vaikunthapurramuloo.jpeg" alt="Ala Vaikunthapurramuloo "></a><br><br><center><b>Ala Vaikunthapurramuloo (2020)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="Image/Sir.jpeg" alt="Sir"></a><br><br><center><b>Sir (2023)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="Image/Salaar.jpeg" alt="Salaar"></a><br><br><center><b>Salaar (2023)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="Image/Arjun Reddy.jpeg" alt="Arjun Reddy"></a><br><br><center><b>Arjun Reddy (2017)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="Image/Eega.jpeg" alt="Eega"></a><br><br><center><b>Eega (2012)</b></center></div>
         </div>
 
         <h4><button>Odia Movies</button></h4>
